# aboba

./: CMakeLists.txt  main.cpp
.ccls-cache/@@home@maks@shit@work@sfml@chunk_creator_rpg/: @usr@include@SFML@Config.hpp.blob  @usr@include@SFML@Graphics.hpp.blob  @usr@include@SFML@Graphics@BlendMode.hpp.blob  @usr@include@SFML@Graphics@CircleShape.hpp.blob  @usr@include@SFML@Graphics@Color.hpp.blob  @usr@include@SFML@Graphics@ConvexShape.hpp.blob  @usr@include@SFML@Graphics@Drawable.hpp.blob  @usr@include@SFML@Graphics@Export.hpp.blob  @usr@include@SFML@Graphics@Font.hpp.blob  @usr@include@SFML@Graphics@Glsl.hpp.blob  @usr@include@SFML@Graphics@Glsl.inl.blob  @usr@include@SFML@Graphics@Glyph.hpp.blob  @usr@include@SFML@Graphics@Image.hpp.blob  @usr@include@SFML@Graphics@PrimitiveType.hpp.blob  @usr@include@SFML@Graphics@Rect.hpp.blob  @usr@include@SFML@Graphics@Rect.inl.blob  @usr@include@SFML@Graphics@RectangleShape.hpp.blob  @usr@include@SFML@Graphics@RenderStates.hpp.blob  @usr@include@SFML@Graphics@RenderTarget.hpp.blob  @usr@include@SFML@Graphics@RenderTexture.hpp.blob  @usr@include@SFML@Graphics@RenderWindow.hpp.blob  @usr@include@SFML@Graphics@Shader.hpp.blob  @usr@include@SFML@Graphics@Shape.hpp.blob  @usr@include@SFML@Graphics@Sprite.hpp.blob  @usr@include@SFML@Graphics@Text.hpp.blob  @usr@include@SFML@Graphics@Texture.hpp.blob  @usr@include@SFML@Graphics@Transform.hpp.blob  @usr@include@SFML@Graphics@Transformable.hpp.blob  @usr@include@SFML@Graphics@Vertex.hpp.blob  (+445 more)
Debug/: CMakeCache.txt  Makefile  cmake_install.cmake  compile_commands.json
(+121 files in other folders)
